--- a/view/index.html
+++ b/view/index.html
@@ -16,7 +16,16 @@
             <div class="spinner-border" role="status" id="loading"></div>
         </div>
 
-        <p class="h1 text-center">Tarefas de um usuário</p>
+        <div class="d-flex">
+            <p class="h1 text-center flex-grow-1">Suas tarefas</p>
+            <button
+                type="button"
+                class="btn btn-outline-dark text-left"
+                onclick="localStorage.removeItem('Authorization'); window.location = '/view/login.html'"
+            >
+                SignOut
+            </button>
+        </div>
 
         <table class="table table-hover">
             <tbody id="tasks"></tbody>
@@ -27,6 +36,6 @@
             integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
             crossorigin="anonymous"
         ></script>
-        <script src="script.js"></script>
+        <script src="scripts/script.js"></script>
     </body>
 </html>
